lib: check if an adapter is present before trying to register the agent

Fixes the following warnings and segfault when running test-agent with no
adapter present:
(process:5950): GLib-GIO-CRITICAL **: g_dbus_proxy_get_object_path: assertion `G_IS_DBUS_PROXY (proxy)' failed

(process:5950): GLib-CRITICAL **: g_path_get_basename: assertion `file_name != NULL' failed

(process:5950): GLib-GIO-CRITICAL **: g_dbus_connection_register_object: assertion `object_path != NULL && g_variant_is_object_path (object_path)' failed

Program received signal SIGSEGV, Segmentation fault.
0xb7fc943c in bluetooth_agent_register (agent=0x8053420) at bluetooth-agent.c:462
462			g_warning ("Failed to register object: %s", error->message);
(gdb) print error
$1 = (GError *) 0x0
(gdb)

https://bugzilla.gnome.org/show_bug.cgi?id=674720